Ensure that recursive GitRepos don't get exported.
Added parameter into export method to provide a Set of types that must not be exported.